--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
-- implement input
+- implement font manager
 - implement colored text
 - implement animated text
+- implement input
 - implement input options feature
